macros/tests/compile_fail/package_invalid_attribute.stderr
error: [melbi] expected `builder = identifier`, or no arguments
 --> tests/compile_fail/package_invalid_attribute.rs:5:17
  |
5 | #[melbi_package(invalid = "value")]
  |                 ^^^^^^^^^^^^^^^^^
